feat: Implement authentication and backend dependencies
Adds necessary backend dependencies (Express, CORS, JWT, bcrypt, dotenv, pg) to package.json and backend/package.json.

Updates frontend dependencies and enables remote module loading for these new packages in index.html.

Refactors App.tsx to use AuthProvider and conditionally render LoginScreen or DashboardLayout based on authentication status.

Introduces a robust AuthContext with login, register, logout functionality, including token handling and user state management. The context now supports loading states and error handling.

Enhances LoginScreen to support both login and registration forms, integrates with the AuthContext, and includes basic client-side validation.

Updates types.ts to define a comprehensive User interface.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,15 @@
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.29.1",
-    "recharts": "https://aistudiocdn.com/recharts@^3.4.1"
+    "recharts": "https://aistudiocdn.com/recharts@^3.4.1",
+    "cors": "https://aistudiocdn.com/cors@^2.8.5",
+    "express": "https://aistudiocdn.com/express@^5.1.0",
+    "pg": "https://aistudiocdn.com/pg@^8.16.3",
+    "cookie-parser": "https://aistudiocdn.com/cookie-parser@^1.4.7",
+    "jsonwebtoken": "https://aistudiocdn.com/jsonwebtoken@^9.0.2",
+    "dotenv": "https://aistudiocdn.com/dotenv@^17.2.3",
+    "bcrypt": "https://aistudiocdn.com/bcrypt@^6.0.0",
+    "jwt-decode": "https://aistudiocdn.com/jwt-decode@^4.0.0"
   }
 }
 </script>
